--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "koa-router": "^8.0.8",
     "sequelize": "^5.21.5",
     "sequelize-cli": "^5.5.1",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.1.1",
+    "svjsl": "^1.8.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
